# socialos-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260719_0001_create_posts.py  20260720_0002_clerk_identity_ids.py  20260721_0003_social_publishing_vertical.py  20260721_0004_meta_hardening.py
apps/api/src/socialos/: __init__.py  config.py  main.py
apps/api/src/socialos/application/common/: auth.py
apps/api/src/socialos/application/jobs/: ports.py
apps/api/src/socialos/application/posts/: __init__.py  ports.py  use_cases.py
apps/api/src/socialos/application/social/: ports.py  use_cases.py
apps/api/src/socialos/domain/: __init__.py
apps/api/src/socialos/domain/posts/: __init__.py  entities.py
apps/api/src/socialos/domain/social/: __init__.py  entities.py
apps/api/src/socialos/infrastructure/ai/: content_service.py
apps/api/src/socialos/infrastructure/auth/: clerk.py
apps/api/src/socialos/infrastructure/database/: base.py  models.py  repositories.py  session.py
apps/api/src/socialos/infrastructure/providers/: __init__.py  registry.py
apps/api/src/socialos/infrastructure/security/: oauth_state.py  token_cipher.py
apps/api/src/socialos/presentation/: __init__.py
apps/api/tests/unit/: test_ai_generation_cache.py  test_authorization.py  test_clerk_token_verifier.py  test_config.py  test_create_post.py  test_meta_oauth.py  test_post_entity.py  test_social_publication.py
(+61 files in other folders)
