[project]
name = "socialos-api"
version = "0.1.0"
description = "SocialOS AI application API"
requires-python = ">=3.13,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.5,<6",
  "cryptography>=45,<46",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/socialos"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src/socialos --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
